test/spec_vectors/simd_i16x8_cmp/fail/module_25.wat
(module (func $i16x8.gt_s-arg-empty (result v128) (i16x8.gt_s)))